--- a/FE/src/styles/Login.css
+++ b/FE/src/styles/Login.css
@@ -1,15 +1,15 @@
-.box{
+.logindiv1{
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+    flex-direction: column; 
     width: 100%;
     height: 100vh;
-    display: flex; 
-    justify-content: center; 
-    align-items: center; 
-    background-color: aliceblue;
+    /* background-color: aliceblue; */
 }
 
-.form1{
+.loginform1 {
     display: flex;
     flex-direction: column;
-    background-color: bisque;
+    /* background-color: blue; */
 }
-
