--- a/FE/src/styles/Register.css
+++ b/FE/src/styles/Register.css
@@ -1,5 +1,6 @@
-.form1 {
+.registerdiv1 {
     display: flex;
+    flex-direction: column;
     justify-content: center; 
     align-items: center; 
     width: 100%;
@@ -7,7 +8,7 @@
     /* background-color: aliceblue; */
 }
 
-.form2 {
+.registerform1 {
     display: flex;
     flex-direction: column;
     /* background-color: rgb(143, 175, 204); */
