--- a/FE/src/styles/font.css
+++ b/FE/src/styles/font.css
@@ -2,42 +2,42 @@
 
 @font-face {
     font-family: 'Pretendard Regular';
-    src: url('./fonts/Pretendard-Regular.woff') format('woff');
+    src: url('../fonts/Pretendard-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Pretendard Medium';
-    src: url('./fonts/Pretendard-Medium.woff') format('woff');
+    src: url('../fonts/Pretendard-Medium.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Pretendard SemiBold';
-    src: url('./fonts/Pretendard-SemiBold.woff') format('woff');
+    src: url('../fonts/Pretendard-SemiBold.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Pretendard Bold';
-    src: url('./fonts/Pretendard-Bold.woff') format('woff');
+    src: url('../fonts/Pretendard-Bold.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Pretendard ExtraBold';
-    src: url('./fonts/Pretendard-ExtraBold.woff') format('woff');
+    src: url('../fonts/Pretendard-ExtraBold.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Pretendard Black';
-    src: url('./fonts/Pretendard-Black.woff') format('woff');
+    src: url('../fonts/Pretendard-Black.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
