--- a/FE/src/styles/RouterLogo.css
+++ b/FE/src/styles/RouterLogo.css
@@ -1,28 +1,36 @@
 .rlogoheader {
-    background: gray;
+    /* background: gray; */
     padding: 20;
     display: flex;
     flex-direction: row;
     clear: both;
 }
 
+.rlogoimg1 {
+    margin-left: 3vw;
+    margin-top: 0.6vh;
+}
+
 .rlogodiv2{
-    cursor: pointer;
     /* background-color: blue; */
-    width: 50px;
-    height: 50px;
+    cursor: pointer;
+    width: 70px;
+    height: 70px;
     display: flex;
     flex-direction: column;
-    margin-left: 90%;
+    margin-left: 89vw;
+    margin-top: 0.6vh;
 }
 
 .rlogoimg2{
-    width : 1.6em;
-    height : 1.6em;
+    width : 2.3em;
+    height : 2.3em;
+    margin-left: 0.5vw;
 }
 
 .rlogop1{
     margin-top: 0px;
-    font-family: "Pretendard Medium";
-    font-size: 0.6em;
+    margin-left: 0.3vw;
+    font-family: "Pretendard Regular";
+    font-size: 0.93em;
 }
