--- a/DA/templates/home.html
+++ b/DA/templates/home.html
@@ -9,10 +9,10 @@
         <h1> Classification PREDICTION</h1>
 
         <form method="POST", action="{{url_for('home')}}">
-           <b> Machinery :  <input type="text", name='a', placeholder="enter 1"> <br><br>
-            Assembly :  <input type="text", name='b', placeholder="enter 2"> <br><br>
-            part 1 :  <input type="text", name='c', placeholder="enter 3"> <br><br>
-            청구 품목 : <input type="text", name='d', placeholder="enter 4"> <br><br><br></b>
+           <b> Machinery :  <input type="text", name='a', placeholder="Machinery"> <br><br>
+            Assembly :  <input type="text", name='b', placeholder="Assembly"> <br><br>
+            Part No.1 :  <input type="text", name='c', placeholder="Part No.1"> <br><br>
+            청구품목 : <input type="text", name='d', placeholder="청구품목"> <br><br><br></b>
             <input type="submit" , value='predict' >
         </form>
 
