로그인 수정
- LoginPage 에러 메시지 수정
- RegisterPage 수정중

--- a/FE/src/styles/Login.css
+++ b/FE/src/styles/Login.css
@@ -13,3 +13,10 @@
     flex-direction: column;
     /* background-color: blue; */
 }
+
+.logindiverror{
+    color: red;
+    text-align: center;
+    font-size: 0.875rem;
+    margin-top: 1rem;
+}
