--- a/FE/src/styles/Search.css
+++ b/FE/src/styles/Search.css
@@ -1,35 +1,39 @@
 .searchbox {
-      display: flex; 
-     flex-direction: row; 
-     justify-content: center;  
-    position: relative;
-    width: 40vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  position: relative;
+  width: 40vw;
   /* width: 300px; */
 
 }
+
 .searchbox input {
-    /*  width: 50vw; 
+  /*  width: 50vw; 
     box-sizing: border-box;
     border : 1px solid rgb(220, 220, 220);
     border-radius: 5px;
     padding: 15px; */
-    width: 100%; 
+  width: 50vw;
+  height: 20%;
   border: 1px solid #bbb;
   border-radius: 8px;
   padding: 15px 12px;
   font-size: 14px;
 }
 
+/*
 .searchbox input:focus {
-    outline: none;
-    border: 1px solid #1f93ff;
+  outline: none;
+  border: 1px solid #1f93ff;
 }
+*/
 
-.searchlogoimg{
-    position : absolute;
-    width: 20px;
-    top: 10px;
-    right: 12px;
-    margin: 0;
-    cursor: pointer;
+.searchlogoimg {
+  position: absolute;
+  width: 25px;
+  top: 11px;
+  right: 12px;
+  margin: 0;
+  cursor: pointer;
 }
