--- a/FE/src/styles/Register.css
+++ b/FE/src/styles/Register.css
@@ -1,9 +1,9 @@
 .registerdiv1 {
     display: flex;
-    flex-direction: column;
     justify-content: center; 
     align-items: center; 
-    width: 100%;
+    flex-direction: column;
+    width: 100vw;
     height: 100vh;
     /* background-color: aliceblue; */
 }
@@ -13,4 +13,3 @@
     flex-direction: column;
     /* background-color: rgb(143, 175, 204); */
 }
-
