--- a/DA/templates/after.html
+++ b/DA/templates/after.html
@@ -6,22 +6,22 @@
 </head>
 <body>
     <center>
-      <h1>  PREDICTION :  </h1>
+      <h1>  PREDICTION : {{data}}</h1>
 
-    {%if data == 0%}
-    <h1>Iris-setosa</h1>
-    <img src='static\setosa.jpg'>
+<!--    {%if data == 0%}-->
+<!--    <h1>Iris-setosa</h1>-->
+<!--    <img src='static\setosa.jpg'>-->
 
-    {%elif data == 1%}
-    <h1>Iris-versicolor</h1>
-    <img src='static\verci.jpg'>
+<!--    {%elif data == 1%}-->
+<!--    <h1>Iris-versicolor</h1>-->
+<!--    <img src='static\verci.jpg'>-->
 
-    {%else %}
-    <h1>Iris-verginica</h1>
-    <img src='static\vergi.jpg'>
+<!--    {%else %}-->
+<!--    <h1>Iris-verginica</h1>-->
+<!--    <img src='static\vergi.jpg'>-->
 
 
-    {%endif%}
+<!--    {%endif%}-->
 
         <br><br>
     <a href='/'>go back to home page</a>
