--- a/DA/templates/after.html
+++ b/DA/templates/after.html
@@ -9,6 +9,7 @@
       <h1>  PREDICTION : {{data}}</h1>
 
 <!--    {%if data == 0%}-->
+<!--    <h1>  PREDICTION : {{data}}</h1>-->
 <!--    <h1>Iris-setosa</h1>-->
 <!--    <img src='static\setosa.jpg'>-->
 
