--- a/DA/templates/home.html
+++ b/DA/templates/home.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-
+<body>
     <center>
         <h1> Classification PREDICTION</h1>
 
-        <form method="POST", action="{{url_for('home')}}">
+        <form method='POST', action='/predict'>
            <b> Machinery :  <input type="text", name='a', placeholder="Machinery"> <br><br>
             Assembly :  <input type="text", name='b', placeholder="Assembly"> <br><br>
             Part No.1 :  <input type="text", name='c', placeholder="Part No.1"> <br><br>
