--- a/DA/templates/after.html
+++ b/DA/templates/after.html
@@ -6,23 +6,11 @@
 </head>
 <body>
     <center>
-      <h1>  PREDICTION : {{data}}</h1>
+      <h1>  PREDICTION </h1>
+        <br>
+        <br>
+        <h3> {{data}} </h3>
 
-<!--    {%if data == 0%}-->
-<!--    <h1>  PREDICTION : {{data}}</h1>-->
-<!--    <h1>Iris-setosa</h1>-->
-<!--    <img src='static\setosa.jpg'>-->
-
-<!--    {%elif data == 1%}-->
-<!--    <h1>Iris-versicolor</h1>-->
-<!--    <img src='static\verci.jpg'>-->
-
-<!--    {%else %}-->
-<!--    <h1>Iris-verginica</h1>-->
-<!--    <img src='static\vergi.jpg'>-->
-
-
-<!--    {%endif%}-->
 
         <br><br>
     <a href='/'>go back to home page</a>
