--- a/DA/templates/home.html
+++ b/DA/templates/home.html
@@ -16,6 +16,27 @@
             <input type="submit" , value='predict' >
         </form>
 
+        <p>
+            예시 데이터 <br>
+            Machinery : NO.1 FIRE WASH DOWN PUMP <br>
+            Assembly : PUMP REPAIR KIT <br>
+            Part No.1 : 4476 <br>
+            청구품목  : GASKET-CASING <br>
+
+            <br><br>
+            결과값 => : GASKET
+            <hr>
+
+            예시 데이터 1<br>
+            Machinery : MAIN BOOM DOUBLE WINCH <br>
+            Assembly : BRAKE GROUP <br>
+            Part No.1 : 21036 <br>
+            청구품목  : SUNGEAR <br>
+
+            <br><br>
+            결과값 => : GEAR
+
+        </p>
     </center>
 
 
