--- a/DA/templates/after.html
+++ b/DA/templates/after.html
@@ -9,11 +9,15 @@
       <h1>  PREDICTION </h1>
         <br>
         <br>
-        <h3> {{data}} </h3>
+        Machinery : {{datas[0]}} <br>
+        Assembly : {{datas[1]}} <br>
+        Part No.1 : {{datas[2]}} <br>
+        청구품목  : {{datas[3]}} <br>
+        <h3> category : {{pred}} </h3>
 
 
         <br><br>
-    <a href='/'>go back to home page</a>
+    <a href='/'>go home</a>
     </center>
 </body>
 </html>
