--- a/DA/templates/home.html
+++ b/DA/templates/home.html
@@ -9,11 +9,11 @@
         <h1> Classification PREDICTION</h1>
 
         <form method='POST', action='/predict'>
-           <b> Machinery :  <input type="text", name='a', placeholder="Machinery"> <br><br>
-            Assembly :  <input type="text", name='b', placeholder="Assembly"> <br><br>
-            Part No.1 :  <input type="text", name='c', placeholder="Part No.1"> <br><br>
-            청구품목 : <input type="text", name='d', placeholder="청구품목"> <br><br><br></b>
-            <input type="submit" , value='predict' >
+           <b> Machinery :  <input type="text", name='a', placeholder="Machinery", required> <br><br>
+            Assembly :  <input type="text", name='b', placeholder="Assembly", required> <br><br>
+            Part No.1 :  <input type="text", name='c', placeholder="Part No.1", required> <br><br>
+            청구품목 : <input type="text", name='d', placeholder="청구품목", required> <br><br><br></b>
+            <input type="submit" , value='predict'>
         </form>
 
         <p>
