--- a/FE/src/styles/RouterLogo.css
+++ b/FE/src/styles/RouterLogo.css
@@ -78,3 +78,9 @@
     display: flex;
     flex-direction: column;
 }
+
+/* 버튼 */
+.rlogodiv .btn{
+    border: none;
+    background-color:transparent;
+}
