--- a/DA/templates/home.html
+++ b/DA/templates/home.html
@@ -8,7 +8,7 @@
     <center>
         <h1> Classification PREDICTION</h1>
 
-        <form method='POST', action='/predict'>
+        <form method='POST', action='/item/predict/classify'>
            <b> Machinery :  <input type="text", name='a', placeholder="Machinery", required> <br><br>
             Assembly :  <input type="text", name='b', placeholder="Assembly", required> <br><br>
             Part No.1 :  <input type="text", name='c', placeholder="Part No.1", required> <br><br>
