--- a/FE/src/styles/MainPage.css
+++ b/FE/src/styles/MainPage.css
@@ -8,3 +8,59 @@
     align-items: center; 
     text-align: center;
 }
+
+.figure {
+	width: 100%;
+	height: 100%;
+	z-index: 1;
+}
+
+.figure img {
+	width: 100%;
+	height: 93vh;
+	object-fit: fill;
+    opacity: 0.5;
+
+    image-rendering: -moz-crisp-edges;
+    image-rendering: -o-crisp-edges;
+    image-rendering: -webkit-optimize-contrast;
+    -ms-interpolation-mode: nearest-neighbor;
+    image-rendering: crisp-edges;
+}
+
+.figure article {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+	left: 50vw;
+	top: 25%;
+    position: absolute;
+    transform: translate(-50%, -50%);
+
+    /* position:relative;  */
+    height: 100%;
+}
+
+.figure h1{
+    color: black;
+    font-size: 3em;
+}
+
+.figure div{
+    display: flex;
+    flex-direction: column;
+    position:absolute; 
+    bottom:0px; 
+}
+
+.btn{
+    background-color: darkblue;
+    color: white;
+    padding: 10px;
+    border-radius: 7px;
+    width: 30vw;
+    margin-bottom: 15px;
+    font-size: 15px;
+}
