--- a/FE/src/styles/Search.css
+++ b/FE/src/styles/Search.css
@@ -9,3 +9,20 @@
   display: flex;
   flex-direction: row;
 }
+
+.pagination {
+  position: center;
+  /* right: 0; */
+  bottom: -2rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  /* text-align: center; */
+  list-style-type: none;
+  /* listStyleType: "none"; */
+  /* padding: 0; */
+  margin-top: auto;
+}
+.pagination > li {
+  margin-left: 5px;
+}
