--- a/FE/src/index.css
+++ b/FE/src/index.css
@@ -15,3 +15,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* 전역 폰트 */
+* {
+  font-family: 'Pretendard Medium';
+}
