--- a/FE/src/styles/RouterLogo.css
+++ b/FE/src/styles/RouterLogo.css
@@ -6,12 +6,14 @@
     display: flex;
     flex-direction: row;
     margin-right: 20vw;
+    margin-left: 100px;
 }
 
 .logoimg {
     margin-left: 3vw;
     /* margin-top: 0.6vh; */
-    width: 2.7em;
+    /* width: 2.7em; */
+    width: 10vw;
     height: 2.7em;
 }
 
