--- a/FE/src/styles/RouterLogo.css
+++ b/FE/src/styles/RouterLogo.css
@@ -24,3 +24,10 @@
     font-size: 1.5em;
     margin-top: 3%;
 }
+
+/* routes/RouterNav.js */
+nav{
+    border-width: 0px 0px 1px 0px ;
+    border-style: solid;
+    border-color: gainsboro;
+}
