--- a/FE/src/styles/HelpDesk.css
+++ b/FE/src/styles/HelpDesk.css
@@ -2,12 +2,13 @@ table {
     border: 1px solid black;
     border-collapse: collapse;
     width: 75vw;
+    /* height: 50vh; */
     text-align: center;
     background-color: whitesmoke;
 }
 
 table th, table td {
-    border: 1px solid black;
+    border: none;
     padding: 10px;
 }
 
@@ -64,6 +65,12 @@ table th, table td {
     align-items: center;
     flex-direction: column;
     margin-top: 50px;
+}
+
+.h-96 {
+    height: 60vh;
+    border: none;
+    background-color: white;
 }
 
 .wrtBtn {
