--- a/FE/src/styles/MainPage.css
+++ b/FE/src/styles/MainPage.css
@@ -1,39 +1,39 @@
-.maindiv1{
-    /* background-color: aquamarine; */
-}
-
-.maindiv2 {
-    /* background-color: aliceblue; */
-    justify-content: center;
-    align-items: center; 
-    text-align: center;
-}
-
 .figure {
-    display: flex; /* 추가된 부분 */
-    justify-content: center; /* 추가된 부분 */
-    align-items: center; /* 추가된 부분 */
-	width: 100%;
-	height: 100%;
-	z-index: 1;
+    display: flex;
+    /* 추가된 부분 */
+    justify-content: center;
+    /* 추가된 부분 */
+    align-items: center;
+    /* 추가된 부분 */
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+
 }
 
-.figure > img {
+.figure>article>img {
 
-    margin-top: 2vh;
-
+    /* background-size: cover;
+    background-repeat: no-repeat;
+    margin-top: 2vh; 
     justify-content: center;
-	width: 80%;
+	width: 100%; 
+    max-width: fit-content;
+    max-height: auto;
 	height: 83vh;
-	object-fit: cover; /*fill -> cover*/
-    opacity: 0.5;
+	object-fit: cover; 
+    opacity: 0.5; 
 
     image-rendering: -moz-crisp-edges;
     image-rendering: -o-crisp-edges;
     image-rendering: -webkit-optimize-contrast;
     -ms-interpolation-mode: nearest-neighbor;
-    image-rendering: crisp-edges;
+    image-rendering: crisp-edges; */
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
+
 
 .figure article {
     display: flex;
@@ -41,8 +41,8 @@
     justify-content: center;
     align-items: center;
 
-	left: 50vw;
-	top: 25%;
+    left: 50vw;
+    top: 25%;
     position: absolute;
     transform: translate(-50%, -50%);
 
@@ -50,20 +50,26 @@
     height: 100%;
 }
 
-.figure h1{
+.figure h1 {
     margin-top: 300px;
     color: black;
     font-size: 3em;
 }
 
-.figure div{
+.figure div {
     display: flex;
     flex-direction: column;
-    position:absolute; 
-    bottom:0px; 
+    position: absolute;
+    bottom: 0px;
 }
 
-.btn{
+.background {
+    background-image: url(../images/banner.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.btn {
     background-color: darkblue;
     color: white;
     padding: 10px;
